// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditStageView snapshot test should render properly 1`] = `
<div>
  <div
    class="stageCreate"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-medium"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <form
          class="FormikForm--main"
        >
          <div>
            <p
              class="StyledProps--font StyledProps--main addStageHeading StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--margin-bottom-medium"
              style="display: flex; align-items: center;"
            >
              <span
                class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--margin-right-xsmall"
                data-icon="ci-main"
              >
                <svg
                  height="24"
                  viewBox="0 0 32 32"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M29 16c0 1.6038-.3111 3.1631-.8544 4.5992-.0998.2637-.4365.3299-.6371.1317l-3.989-3.9409c-.1664-.1644-.1943-.4212-.0858-.6285.4326-.8268.6489-1.7725.6489-2.7615.0565-3.2217-2.6-5.87826-5.8783-5.87826-1.0408 0-1.9947.26076-2.8235.70606-.204.10961-.458.08344-.6229-.07926L11.207 4.64368c-.2503-.24699-.1738-.66779.1545-.79382C12.8053 3.29544 14.3394 3 16 3c7.1783 0 13 5.82174 13 13ZM8.47555 5.42062c.23175-.16331.54614-.12936.74662.07111l4.03533 4.03529c.1783.17831.1939.46028.0539.67008-.6307.9455-.9853 2.0581-.9853 3.2594 0 3.2783 2.6565 5.9348 5.9348 5.9348 1.2013 0 2.3139-.3546 3.2594-.9853.2098-.14.4918-.1244.6701.0539l4.3678 4.3679c.2035.2034.235.5235.0651.7557C24.2247 26.8601 20.3994 29 16 29 8.82174 29 3 23.1783 3 16c0-4.4033 2.14366-8.23149 5.47555-10.57938ZM18.2609 17.1304c2.2043 0 3.9565-1.7521 3.9565-3.9565 0-2.2043-1.7522-3.95651-3.9565-3.95651-2.2044 0-3.9566 1.75221-3.9566 3.95651 0 2.2044 1.7522 3.9565 3.9566 3.9565Z"
                    fill="url(#a)"
                    fill-rule="evenodd"
                  />
                  <defs>
                    <lineargradient
                      gradientUnits="userSpaceOnUse"
                      id="a"
                      x1="-5.39823"
                      x2="11.3982"
                      y1="11.3982"
                      y2="37.3982"
                    >
                      <stop
                        stop-color="#73DFE7"
                      />
                      <stop
                        offset="1"
                        stop-color="#0095F7"
                      />
                    </lineargradient>
                  </defs>
                </svg>
              </span>
              pipelineSteps.build.create.aboutYourStage
            </p>
            <div
              class="StyledProps--font StyledProps--main main"
            >
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <div
                    class="Text--withDocsTooltip"
                    data-tooltip-id="ciEditStage_identifier"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      Id
                    </p>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text InputWithIdentifier--idValue"
                        tabindex="0"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        >
                          id1
                        </span>
                      </div>
                    </span>
                  </span>
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="Edit"
                    style="vertical-align: middle; cursor: pointer;"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                        opacity="0.3"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="ciEditStage_name"
                    >
                      stageNameLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        placeholder="pipeline.aboutYourStage.stageNamePlaceholder"
                        type="text"
                        value="name1"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
                style="margin-bottom: 0px;"
              >
                <label
                  class="Label--main bp3-label descriptionLabel"
                >
                  optionalField
                </label>
                <div
                  class="bp3-form-group"
                  data-id="description-1"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <textarea
                      autocomplete="off"
                      class="bp3-input bp3-fill"
                      maxlength="1024"
                      name="description"
                      placeholder="common.descriptionPlaceholder"
                    >
                      desc1
                    </textarea>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
              >
                <label
                  class="Label--main bp3-label descriptionLabel"
                >
                  optionalField
                  <span
                    class="bp3-icon StyledProps--main editOpen"
                    data-icon="Edit"
                    data-name="edit"
                    data-testid="tags-edit"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                        opacity="0.3"
                      />
                    </svg>
                  </span>
                </label>
              </div>
            </div>
            <div
              style="display: flex; align-items: center;"
            >
              <label
                class="bp3-control bp3-switch StyledProps--font Switch--switch StyledProps--main"
              >
                <input
                  type="checkbox"
                />
                <span
                  class="bp3-control-indicator"
                />
                <span
                  class="Tooltip--acenter Switch--inlineTooltip"
                  data-tooltip-id="cloneCodebase"
                >
                  cloneCodebaseLabel
                </span>
              </label>
            </div>
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--margin-top-small Button--with-current-color"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                pipelineSteps.build.create.setupStage
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`EditStageView snapshot test should render properly without data 1`] = `
<div>
  <div
    class="stageCreate"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-medium"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <form
          class="FormikForm--main"
        >
          <div>
            <p
              class="StyledProps--font StyledProps--main addStageHeading StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--margin-bottom-medium"
              style="display: flex; align-items: center;"
            >
              <span
                class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--margin-right-xsmall"
                data-icon="ci-main"
              >
                <svg
                  height="24"
                  viewBox="0 0 32 32"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M29 16c0 1.6038-.3111 3.1631-.8544 4.5992-.0998.2637-.4365.3299-.6371.1317l-3.989-3.9409c-.1664-.1644-.1943-.4212-.0858-.6285.4326-.8268.6489-1.7725.6489-2.7615.0565-3.2217-2.6-5.87826-5.8783-5.87826-1.0408 0-1.9947.26076-2.8235.70606-.204.10961-.458.08344-.6229-.07926L11.207 4.64368c-.2503-.24699-.1738-.66779.1545-.79382C12.8053 3.29544 14.3394 3 16 3c7.1783 0 13 5.82174 13 13ZM8.47555 5.42062c.23175-.16331.54614-.12936.74662.07111l4.03533 4.03529c.1783.17831.1939.46028.0539.67008-.6307.9455-.9853 2.0581-.9853 3.2594 0 3.2783 2.6565 5.9348 5.9348 5.9348 1.2013 0 2.3139-.3546 3.2594-.9853.2098-.14.4918-.1244.6701.0539l4.3678 4.3679c.2035.2034.235.5235.0651.7557C24.2247 26.8601 20.3994 29 16 29 8.82174 29 3 23.1783 3 16c0-4.4033 2.14366-8.23149 5.47555-10.57938ZM18.2609 17.1304c2.2043 0 3.9565-1.7521 3.9565-3.9565 0-2.2043-1.7522-3.95651-3.9565-3.95651-2.2044 0-3.9566 1.75221-3.9566 3.95651 0 2.2044 1.7522 3.9565 3.9566 3.9565Z"
                    fill="url(#a)"
                    fill-rule="evenodd"
                  />
                  <defs>
                    <lineargradient
                      gradientUnits="userSpaceOnUse"
                      id="a"
                      x1="-5.39823"
                      x2="11.3982"
                      y1="11.3982"
                      y2="37.3982"
                    >
                      <stop
                        stop-color="#73DFE7"
                      />
                      <stop
                        offset="1"
                        stop-color="#0095F7"
                      />
                    </lineargradient>
                  </defs>
                </svg>
              </span>
              pipelineSteps.build.create.aboutYourStage
            </p>
            <div
              class="StyledProps--font StyledProps--main main"
            >
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <div
                    class="Text--withDocsTooltip"
                    data-tooltip-id="ciEditStage_identifier"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      Id
                    </p>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                        tabindex="0"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        />
                      </div>
                    </span>
                  </span>
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="Edit"
                    style="vertical-align: middle; cursor: pointer;"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                        opacity="0.3"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="ciEditStage_name"
                    >
                      stageNameLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        placeholder="pipeline.aboutYourStage.stageNamePlaceholder"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
              >
                <label
                  class="Label--main bp3-label descriptionLabel"
                >
                  optionalField
                  <span
                    class="bp3-icon StyledProps--main editOpen"
                    data-icon="Edit"
                    data-name="edit"
                    data-testid="description-edit"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                        opacity="0.3"
                      />
                    </svg>
                  </span>
                </label>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
              >
                <label
                  class="Label--main bp3-label descriptionLabel"
                >
                  optionalField
                  <span
                    class="bp3-icon StyledProps--main editOpen"
                    data-icon="Edit"
                    data-name="edit"
                    data-testid="tags-edit"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                        opacity="0.3"
                      />
                    </svg>
                  </span>
                </label>
              </div>
            </div>
            <div
              style="display: flex; align-items: center;"
            >
              <label
                class="bp3-control bp3-switch StyledProps--font Switch--switch StyledProps--main"
              >
                <input
                  checked=""
                  type="checkbox"
                />
                <span
                  class="bp3-control-indicator"
                />
                <span
                  class="Tooltip--acenter Switch--inlineTooltip"
                  data-tooltip-id="cloneCodebase"
                >
                  cloneCodebaseLabel
                </span>
              </label>
            </div>
            <div
              class="configureCodebase"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-normal StyledProps--font-weight-semi-bold StyledProps--margin-bottom-medium"
                style="display: flex; align-items: center;"
              >
                <span
                  class="bp3-icon bp3-icon-cog StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                  icon="cog"
                >
                  <svg
                    data-icon="cog"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      cog
                    </desc>
                    <path
                      d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                pipelineSteps.build.create.configureCodebase
              </p>
              <p
                class="StyledProps--font StyledProps--main StyledProps--margin-bottom-medium"
              >
                pipelineSteps.build.create.configureCodebaseHelperText
              </p>
              <div
                class="bp3-form-group connector"
                data-id="null-1"
              >
                <label
                  class="bp3-label"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="ciEditStage_connectorRef"
                  >
                    connector
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                    data-testid="cr-field-connectorRef"
                    style="width: 366px;"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                      >
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target Text--targetClass"
                          >
                            <p
                              class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                              tabindex="0"
                            >
                              test1
                            </p>
                          </span>
                        </span>
                        <div
                          class="rightStatus"
                        >
                          <span
                            class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                            data-testid="crf-status"
                            icon="full-circle"
                          >
                            <svg
                              data-icon="full-circle"
                              height="6"
                              viewBox="0 0 16 16"
                              width="6"
                            >
                              <desc>
                                full-circle
                              </desc>
                              <path
                                d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                          <span
                            class="Tag--main"
                          >
                            <span
                              class="bp3-tag bp3-minimal"
                              id="tag"
                            >
                              <span
                                class="bp3-text-overflow-ellipsis bp3-fill"
                              >
                                account
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                      icon="chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          chevron-down
                        </desc>
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="bp3-form-group repositoryUrl"
                data-id="repoName-2"
                style="flex-grow: 1;"
              >
                <label
                  class="bp3-label"
                  for="repoName"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="ciEditStage_repoName"
                  >
                    common.repositoryName
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="repoName"
                      placeholder="pipeline.manifestType.repoNamePlaceholder"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--margin-top-small Button--with-current-color"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                pipelineSteps.build.create.setupStage
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
